ISIS-1613: small CSS fix to introduce a gap for value panel when have actions to the right

--- a/core/viewer-wicket-ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
+++ b/core/viewer-wicket-ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
@@ -849,6 +849,7 @@ tr.headers th form input {
     margin-top: 0px;
 }
 
+.valuePanel .actions-right .additionalLinkListInline,
 .valueChoicesSelect2Panel .actions-right .additionalLinkListInline,
 .stringPanel .actions-right .additionalLinkListInline,
 .referencePanel .actions-right .additionalLinkListInline,
